<resources>
    <string name="app_name">Riddle</string>
    <string name="led">Stop the light</string>
    <string name="qr">QR</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="loginSuccesfull">Succesfull</string>
    <string name="loginFail">Please Try Again</string>
    <string name="roomConfig">Room config</string>
    <string name="start">Start to escape</string>
    <string name="settings">Settings</string>
    <string name="ip">IP-Address</string>
    <string name="port">Port</string>
    <string name="apply">Apply</string>

    <string name="titleAdminLogin">Admin Login</string>
    <string name="titleAdminLogout">Logout as admin?</string>

    <string name="logout">Logout</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="roomCreateFailed">Failed to create room, try again.</string>
    <string name="roomInputNotValid">Room input values are not valid.</string>
    <string name="roomCreateSuccess">Room created…</string>
    <string name="roomUpdateSuccess">Updated room…</string>
    <string name="roomDeleteSuccess">Room deleted</string>
    <string name="delete">Delete</string>
    <string name="state">State</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>

</resources>