<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlId"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/id"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlName"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/tlId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfName"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlDescription"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/tlName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlState"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/state"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/tlDescription">

        <AutoCompleteTextView
            android:id="@+id/tfState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:ellipsize="end"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/margin_large"
            android:backgroundTint="@android:color/holo_red_light"
            android:stateListAnimator="@null"
            android:text="@string/delete" />

        <Button
            android:id="@+id/applyButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:stateListAnimator="@null"
            android:text="@string/apply" />

    </LinearLayout>

    <include layout="@layout/progress_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>