<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlId"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/id"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:text="@{viewModel.name}" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlName"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/tlId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:stateListAnimator="@null"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include layout="@layout/progress_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>